array.island.Island.scala.error
Compilation error:
Island:10: error: illegal start of simple expression
        precedent=[]
                  ^Island:12: error: illegal start of simple expression
      if (k>2 && num(k)==num(k-2)){precedent=[]}
                                             ^Island:24: error: ')' expected but 'return' found.
       return nbniv}
       ^