array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  if (num(0)==0){
    var nbniv=0}
  else{var nbniv=1}
  for (k<-1 to (num.lenght-1){
    var precedent:array
    if (num(k)!=num(k-1)){
      if (num(k)==0){
        precedent=[]
      }
      if (k>2 && num(k)==num(k-2)){precedent=[]}
      var verif=false
      for (i <- 0 to (precedent.lenght-1)){
        if (num(k)==precedent(i)){verif=true}
      }
      if (verif==false){
        nbniv=nbniv+1
        precednt=precedent+num(k)
      }
      }
    
    }
       return nbniv}
    
  

